Updated quarters version and added quarters endpoint